# this config isn't for a python package distribution
[tool.poetry]
name = "nauta"
version = "2.0.0"
description = "Cli for control nauta connection and accounts"
authors = ["fsadannn <fsadannn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"
PyQt5 = "^5.12"
requests = "^2.21.0"
parsel = "^1.6.0"
lxml = "^4.3.2"
tinydb = "^4.1.1"
colorama = "^0.4.3"
cx-Freeze = "^6.1"


[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
